--- a/error.html
+++ b/error.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 	<div class="container">
-		<a href="index.html">Go back to the homepage</a>
+		<a href="./">Go back to the homepage</a>
 	</div>
 </body>
 </html>
