--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
       <p>As a BSIT student, I am currently studying towards a Bachelor of Science in Information Technology degree. My focus is on developing a strong understanding of computer systems and technology, as well as learning programming languages, algorithms, and software development. Throughout my studies, I am exploring topics such as data management, cybersecurity, and networking. I am a highly motivated individual who is detail-oriented and dedicated to learning and mastering the latest advancements in the field of information technology. I believe that my education and passion for technology will help me to achieve my career goals and make a positive impact on society.</p>
       <h2>Projects</h2>
       <ul>
-        <a href="error.html" class="card">
+        <a href="error" class="card">
           <img src="kabuyao.jpg" alt="Avatar" style="width:100%">  
-          <p style="text-align:center" href="error.html">Kabuyaw Paynds Systems</p>      
+          <p style="text-align:center">Kabuyaw Paynds Systems</p>      
         </a>
-        <a href="error.html" class="card">
+        <a href="./error" class="card">
           <img src="library.jpg" alt="Avatar" style="width:100%">  
           <p style="text-align:center">Library Management System</p>      
         </a>
-        <a href="error.html" class="card">
+        <a href="./error" class="card">
           <img src="bato.jpg" alt="Avatar" style="width:100%">    
-          <p style="text-align:center">Bato-Bato Pick Game</p>    
+          <p style="text-align:center">Bato-Bato Pick Game</p>         
         </a>
       </ul>
       <h2>Education</h2>  
