--- a/error.html
+++ b/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Page Not Found</title>
+	<title>Project Not Found</title>
 	<style>
 		body {			
 			font-family: Arial, sans-serif;
